btrfs-progs: subvolume delete: use global verbose option
Transpire global --verbose option down to the btrfs subvolume delete
sub-command.

Suggested-by: David Sterba <dsterba@suse.com>
Signed-off-by: Anand Jain <anand.jain@oracle.com>

--- a/Documentation/btrfs-subvolume.asciidoc
+++ b/Documentation/btrfs-subvolume.asciidoc
@@ -87,7 +87,8 @@ wait for transaction commit at the end of the operation.
 wait for transaction commit after deleting each subvolume.
 +
 -v|--verbose::::
-verbose output of operations.
+verbose output of operations. This option is merged to the global verbose
+option.
 +
 -i|--subvolid <subvolid>::::
 subvolume id to be removed instead of the <path> that should point to the
