btrfs-progs: balance status: use global verbose option
Transpire global --verbose option down to the btrfs balance status
sub-command.

Suggested-by: David Sterba <dsterba@suse.com>
Signed-off-by: Anand Jain <anand.jain@oracle.com>

--- a/Documentation/btrfs-balance.asciidoc
+++ b/Documentation/btrfs-balance.asciidoc
@@ -110,7 +110,8 @@ start the process that calls the kernel ioctl
 *status* [-v] <path>::
 Show status of running or paused balance.
 +
-If '-v' option is given, output will be verbose.
+If '-v' option is given, output will be verbose. This option is merged to the
+global verbose option.
 
 FILTERS
 -------
