btrfs-progs: inspect-internal inode-resolve: use global verbose
Transpire global --verbose option down to the
btrfs inspect-internal inode-resolve sub-command.

Suggested-by: David Sterba <dsterba@suse.com>
Signed-off-by: Anand Jain <anand.jain@oracle.com>

--- a/Documentation/btrfs-inspect-internal.asciidoc
+++ b/Documentation/btrfs-inspect-internal.asciidoc
@@ -139,6 +139,7 @@ at 'path', ie. all hardlinks
 +
 -v::::
 verbose mode, print count of returned paths and ioctl() return value
+This option is merged to the global verbose option
 
 *logical-resolve* [-Pvo] [-s <bufsize>] <logical> <path>::
 (needs root privileges)
