btrfs-progs: receive: use global verbose and quiet options
Transpire global --verbose and --quiet options down to the btrfs receive
sub-command.

Suggested-by: David Sterba <dsterba@suse.com>
Signed-off-by: Anand Jain <anand.jain@oracle.com>

--- a/Documentation/btrfs-receive.asciidoc
+++ b/Documentation/btrfs-receive.asciidoc
@@ -36,10 +36,12 @@ A subvolume is made read-only after the receiving process finishes successfully 
 `Options`
 
 -v::
-increase verbosity about performed actions, print details about each operation
+increase verbosity about performed actions, print details about each operation.
+This option is merged to the global verbose option.
 
 -q|--quiet::
-suppress all messages except errors
+suppress all messages except errors. This option is merged to the global quiet option.
+
 
 -f <FILE>::
 read the stream from <FILE> instead of stdin,
